--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		  <div class="col-md-6"  style="max-width: 648px;">
 			<div class="card-body">
 				<a href="" class="button-consultoria">Consultorías</a>
-			  <h5 class="card-title">Diseño de la Experiencia del cliente</h5>
+			  <h5 class="card-title">Diseño de la Experiencia<br> del cliente</h5>
 			  <p class="card-text">La experiencia del cliente (CX) es cómo se relaciona una empresa con sus clientes en todos los aspectos del recorrido de compra, desde el marketing hasta las ventas y el servicio al cliente pasando por cada punto intermedio. En gran parte, es la suma total de todas las interacciones que un cliente tiene con tu marca.</p><br>
 			  <a href="#form" class="button-agenda">Agendar  <img src="img/flecha.png" alt=""></a>
 			</div>
